fix(common-ui): markdown input form spacing

--- a/plugins-structure/packages/common-ui/src/components/RecordForm/styles.module.css
+++ b/plugins-structure/packages/common-ui/src/components/RecordForm/styles.module.css
@@ -54,8 +54,8 @@
 }
 
 .markdownInput {
-  margin-top: 1rem;
-  margin-bottom: 2.3rem;
+  padding-top: 1rem;
+  padding-bottom: 2.3rem;
 }
 
 /* Remove numberInput spinners */
@@ -83,6 +83,10 @@
   padding: 0 !important;
   margin-top: 1rem;
   margin-bottom: 2.3rem;
+}
+
+.select:focus {
+  border: red;
 }
 
 .select > div {
